# janimation

./: Cargo.toml  README.md
src/: bank.rs  interpolation.rs  lib.rs  player.rs  prelude.rs  skeleton.rs
