[package]
name = "janimation"
version = "0.1.0"
authors = ["Joshua Narayana <europajuice@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_math = "0.5"
bevy_ecs = "0.5"
bevy_internal = "0.5"
bevy_render = "0.5"
bevy_pbr = "0.5"